# slam-based-calibration

./: README.md  default.launch
extrinsic_calib/: .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.old  package.xml
extrinsic_calib/config/: config.json  icp.yaml
extrinsic_calib/include/: calibration.h  g2oedge.h  img_trans_estimate.h  pc_trans_estimate.h  utils.h
extrinsic_calib/launch/: first.launch
extrinsic_calib/main/: app_noros.cpp  essential2trans.cpp  g2o_ba_example.cpp  icp.cpp  img_lines.cpp  offline_calibration.cpp  pc_depth_image.cpp  pc_lines.cpp  sample.cpp  simulation.cpp
extrinsic_calib/src/: calibration.cpp  g2oedge.cpp.tmp  img_trans_estimate.cpp  pc_trans_estimate.cpp  utils.cpp
extrinsic_calib/srv/: ExCalibration.srv
handeye_calib_camodocal/launch/: handeye_file.launch
handeye_calib_camodocal/launch/old/: CalibratedTransform.yml  TransformPairsInput.yml
handeye_calib_camodocal/src/: handeye_calibration.cpp
lidar_camera_calibration_slam_based/: CMakeLists.txt  package.xml
lidar_camera_calibration_slam_based/include/: Jacobian_P_T.h  MICostFunction.h  Probability.h
lidar_camera_calibration_slam_based/scripts/: calibration.py  default.rviz  diffCodeGen.py  plotCostsAndDerivates.m  plotCostsAndDerivatives.m  testDepth.py  tf_cameraInfo_broadcaster.py  visualize_fuse.py  visualize_fuse_kitti.py
lidar_camera_calibration_slam_based/src/: Jacobian_P_T.c  Jacobian_P_T.cpp  MICostFunction.cpp  Probability.cpp  calibrationWithLSD.cpp  calibrationWithLSD_kitti.cpp  collectLidarPointClouds.cpp
lidar_camera_calibration_slam_based/test/: utest_Jacobian_P_T.cpp  utest_Jacobian_T_P.cpp  utest_probability.cpp
lidar_camera_calibration_slam_based/test/data/: genData.m  getGaussWindowEstimateFunction.m  gkdeb.m  mvn.m  normal1D.txt  normal2D_1.txt  normal2D_2.txt  querys.txt  result1.txt  result2.txt
lidar_camera_slam/: CMakeLists.txt  package.xml
lidar_camera_slam/include/: Jacobian_P_T.h  PhotoMetricErrorBlock.h
lidar_camera_slam/scripts/: diffCodeGen.py  getRelativePose.py
lidar_camera_slam/src/: Jacobian_P_T.cpp  odometry.cpp
lidar_camera_slam/test/: utest_Jacobian_P_T.cpp
loam_velodyne/src/: scanRegistration.cpp
